:encoding=UTF-8:

{{{ Version 5.0pre1

Thanks to Björn "Vampire" Kautler, Nathan Gray, Evan Wright, Alan Ezust,
Matthieu Casanova and Jarek Czekalski for contributing to this release.

{{{ Bug fixes

- When parsing buffer-local properties, there was a problem with escape
  processing that prevented buffer-local properties to be read sometimes
  (Bug #3438680 - Björn "Vampire" Kautler)

- Building offline was prevented by a bug in Ivy, this is workarounded
  now in the Ivy settings for jEdit. (Bug #3437212 - Björn "Vampire" Kautler)

- Fixed #3163058: middle mouse button paste doesn't respect gutter selection.
  (Shlomy Reinstein)

- ":encoding=...:" was treated as buffer local property and caused
  confusion about what encoding was used at loading/saving the buffer.
  (SF.net patch #3434651 - Jarek Czekalski, for bug #1643580)

}}}
{{{ API Changes

- TextUtilities.join() now accept Collection<?> instead of Collection<String>
  (Matthieu Casanova)

}}}
{{{ Editing

- Made it possible to disable automatic indentation by buffer or by edit
  mode, and created a status widget to toggle the setting (Evan Wright)

}}}
{{{ UI

- jEdit is now always using continuous layout in JSplitPane (Matthieu Casanova)

- Fixed keyboard handling of comboboxes in jedit's option panes.
  (Bug #3415064 - Alan Ezust)

- Changed menus to use Mac-specific symbols for accelerator keys when using
  OS X and the native look & feel (SF.net patch #1950147 - Nathan Gray)

- Added an option (on by default) to use the native Quartz renderer on
  Mac OS X (Evan Wright)

- Fixed keyboard handling of drop-down menus in File System Browser.
  (#1571578 - Alan Ezust)

- Fixed "Use textarea colors" for dockables created in non-metal L&F.
  (#1794400 - Alan Ezust)

}}}
{{{ Miscellaneous

- jEdit support for keymaps (Matthieu Casanova)

- Settings directory migrated to %APPDATA%/jEdit on Windows
  (#2510763 - Alan Ezust)

}}}

}}}

jEdit buffer local properties:
:folding=explicit:collapseFolds=2: